# RSS

./: .env  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  api.env  deploy.sh  docker-compose-cap-gen.yml  docker-compose.cap_generator.prod.yml  docker-compose.cap_generator.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generator.env  pyproject.toml  requirements.txt
.github/workflows/: actions-lint.yml  build-and-test.yml  build-images.yml  ci.yml  deploy.yml  tests.yml  zizmor.yml
deploy_tools/: api.template.env  backup_pg.sh  nginx.template.conf  rss.template.env  rss_api.service  rss_sasmex.service  tools.md
docs/: api_systemd.md  front_end.md  install_docker.sh  nginx.md  postgresql.md
feeds/: alert.md  alert_format.xml  earthquake_example.xml  feeds.md  sasmex_old.xml  test_alert.xml  update_format.xml
feeds/format/: alert_format.xml  alert_format_old.xml  event_format.xml  sasmex_old.xml  update_format.xml
logs/: logs.md
requirements/: common.txt  dev.txt
scripts/: write_feed.py  write_rss.py
services/cap-api/: .env  Dockerfile  Dockerfile.prod  README.MD  pyproject.toml
services/cap-api/db/: Dockerfile  backup.sh
services/cap-api/requirements/: common.txt  dev.txt
services/cap-api/src/alerts/: __init__.py  app.py  config.py  wsgi.py
services/cap-api/src/alerts/alerts/: __init__.py  alerts.py  models.py
services/cap-api/src/alerts/client/: api_client.py
services/cap-api/src/alerts/utils/: alert_id.py  fake.py  post_alert.py
services/cap-api/src/migrations/versions/: 00a0290f156c_alert_inital_migration.py
services/cap-api/tests/: conftest.py
services/cap-api/tests/integration/: test_api.py
services/cap-api/tests/unit/: test_api_alert_model.py
services/cap-gen/: .env  Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt
services/cap-gen/requirements/: common.txt  dev.txt
services/cap-gen/src/: __init__.py  config.py
services/cap-gen/src/capgen/: __init__.py  config.py  main.py
services/cap-gen/src/capgen/services/: __init__.py  alert_dispatcher.py  api_client.py  feed_poster.py  feed_writer.py  msg_processor.py
services/cap-gen/src/capgen/utils/: server.py
services/cap-gen/src/services/: __init__.py  api_client.py  feed_writer.py
services/cap-gen/tests/integration/: test_save_and_post_cap_feeds.py
services/cap-gen/tests/unit/: test_alert_dispatcher.py  test_feed_poster.py  test_feed_writer.py  test_msg_processor.py
services/client/: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  Dockerfile.staging  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
services/rss/: pyproject.toml  requirements-dev.txt
services/rss/src/cap/: rss.py  states.py
services/rss/src/rss.egg-info/: PKG-INFO  SOURCES.txt
services/rss/src/rss/cap/: geopoint.py  rss.py
services/rss/src/rss/utils/: write_feed.py
services/rss/src/utils/: write_feed.py
services/rss/tests/: test_rss.py
src/: __main__.py  main.py  setup.py  write_feed.py
src/rss/: __init__.py  alert.py  (+10 more)
tests/: alert_handler.py  conftest.py  server.py  test_client.py  test_handlers.py  test_log.py  test_rss.py  test_watch_dog.py
tools/: rss_sasmex.service  rss_sasmex_support.service
(+86 files in other folders)
