# pyproject.toml

[build-system]
requires      = [
    "setuptools>=65.5.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "alerts"
version = "1.7.0"
description = "API for CAP alerts."
readme = "README.md"
authors = [{ name = "Daniel Ibarrola", email = "daniel.ibarrola.sanchez@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["earthquake", "alerts", "cap", "rss"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Daniel-Ibarrola/RSS.git"
